# web-hw-06

./: create_table.py  insert_data.py  pyproject.toml  query_1.py  query_10.py  query_11.py  query_12.py  query_2.py  query_3.py  query_4.py  query_5.py  query_6.py  query_7.py  query_8.py  query_9.py  school_database.db
